Added frontEnd architecture v1
